# Confluox

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-dual-track.yml
docs/en/: case-studies.md  github-about.md  integration-guide.md  plugin-guide.md  public-release-checklist.md  (+4 more)
frontend/: package-lock.json  package.json
gateway/: pyproject.toml
gateway/gateway/: artifact_contract.py  auth.py  bootstrap.py  config.py  host_liveness.py  main.py  plugin_activation.py  plugin_loader.py  plugin_manifest.py  plugin_policy.py  plugin_runtime.py  process_manager.py  resource_resolver.py  sandbox_capability.py  sandbox_executor.py
gateway/gateway/routes/: __init__.py  streaming.py  system.py
gateway/scripts/: build_gateway.sh  build_gateway_nuitka.sh  build_gateway_pyinstaller.sh  scan_plugins.py
gateway/tests/: test_artifact_contract.py  test_auth.py  test_auth_token_lifecycle.py  test_build_gateway_cli.py  test_case_study_assets.py  test_case_study_templates_runtime.py  test_config.py  test_host_liveness.py  test_main.py  test_main_ready.py  test_plugin_activation.py  test_plugin_loader.py  test_plugin_manifest.py  test_plugin_policy.py  test_plugin_runtime.py  test_process_manager.py  test_resource_resolver.py  test_sandbox_capability.py  test_sandbox_executor.py  test_streaming_routes.py  test_system_routes.py
gateway/tests/fixtures/: oop_server.py
plugins/: __init__.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gateway.rs  gateway_artifact.rs  gateway_diagnostics.rs  lib.rs  main.rs
(+51 files in other folders)
