[package]
name = "confluox-desktop"
version = "0.1.0"
description = "Confluox desktop host"
authors = ["Cocoblood9527 <a13760888166@gmail.com>"]
edition = "2021"

[lib]
name = "confluox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
